Add handling for first model run and type of materialisation. Update docs to run macro in pre-hook

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -38,6 +38,9 @@ vars:
       integration_tests_ci_b:
         target_name: ci_b
         warehouse_name_prefix: ci_b
+      developer:
+        target_name: dev
+        warehouse_name_prefix: developer
 
 
 
