--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -25,17 +25,19 @@ dispatch:
 vars:
   # DBT compatibility with legacy surrogate_key macro
   surrogate_key_treat_nulls_as_empty_strings: True
+  
 
-  global_debug_mode: true
-
-  # Macro Polo Warehouse Configuration
-  warehouse_config:
-    warehouse_size: [ 'xs', 's', 'm', 'l', 'xl', '2xl' ]
-    environment:
-      ci_a:
-        warehouse_name_prefix: ci_a
-      ci_b:
-        warehouse_name_prefix: ci_b
+  # Macro Polo 
+  macro_polo:
+    cache: {}
+    logging_level: info
+    warehouse_config:
+      warehouse_size: [ 'xs', 's', 'm', 'l', 'xl', '2xl' ]
+      environment:
+        ci:
+          warehouse_name_prefix: ci
+        dev:
+          warehouse_name_prefix: developer
 
 
 
