--- a/integration_tests/profiles.yml
+++ b/integration_tests/profiles.yml
@@ -1,6 +1,20 @@
 integration_tests:
-  target: ci_a
+  target: ci
   outputs:
+    ci:
+      type: snowflake
+      account: "{{ env_var('DBT_SNOWFLAKE_ACCOUNT') }}"
+      user: "{{ env_var('DBT_SNOWFLAKE_USERNAME') }}"
+      password: "{{ env_var('DBT_SNOWFLAKE_PW') }}"
+      warehouse: "{{ env_var('DBT_SNOWFLAKE_WAREHOUSE') }}"
+      database: "{{ env_var('DBT_SNOWFLAKE_DATABASE') }}"
+      role: "{{ env_var('DBT_SNOWFLAKE_ROLE') }}"
+      threads: 10
+      client_session_keep_alive: False
+      query_tag: "dbt_macro_polo_integration_tests"
+      authenticator: username_password_mfa
+      schema: "{{ env_var('DBT_SNOWFLAKE_SCHEMA') }}_ci"
+
     ci_a:
       type: snowflake
       account: "{{ env_var('DBT_SNOWFLAKE_ACCOUNT') }}"
