Feature/warehouse optimiser
* Init

* Update poetry

* Add refactored allocate_warehouse, get_max_timestamp and logging macros.

* Fix typos. Update configuration.

* Add integration tests

* Add full refresh handler. Add contion when upstream dependencies are not specified

* WIP

* Add more unit tests

* Update unit tests

* Remove length from int

* Remove length from dict

* Fix length

* Fix length in row count macro

* Fix types in warehouse optimiser macro

* Remove length from int in logging macro - That worked

* Remove redundant parameters

* Fix datetime as string issue

* Fix datetime as string issue

* Tidy up allocate_warehouse and get_max_timestamp macros

* Update documentation for get_max_timestamp

* Add get_max_timestamp docs

* Revamp readme add docs.

* Add logo

* Update lock. Add missing docs.

* Comment out section

* Add raw tags to jinja context in docs

* Add doc md jinja reference to property files

* Add tes.log Update readme

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -16,28 +16,30 @@ macro-paths: ["macros"]
 target-path: "target"
 clean-targets: ["target", "dbt_packages"]
 
-require-dbt-version: [">=1.3.0", "<2.0.0"]
+require-dbt-version: [">=1.8.6", "<2.0.0"]
 
 dispatch:
-  - macro_namespace: 'dbt_macro_polo'
-    search_order: ['dbt_macro_polo_integration_tests', 'dbt_macro_polo']
+  - macro_namespace: dbt
+    search_order: [ 'dbt_macro_polo_integration_tests','dbt_macro_polo', 'dbt' ]
 
 vars:
   # DBT compatibility with legacy surrogate_key macro
   surrogate_key_treat_nulls_as_empty_strings: True
-
-  global_debug_mode: true
-
-  # Macro Polo Warehouse Configuration
-  warehouse_config:
-    warehouse_size: [ 'xs', 's', 'm', 'l', 'xl', '2xl' ]
-    environments:
-      integration_tests_ci_a:
-        target_name: ci_a
-        warehouse_name_prefix: ci_a
-      integration_tests_ci_b:
-        target_name: ci_b
-        warehouse_name_prefix: ci_b
+  
+  # Macro Polo 
+  macro_polo:
+    cache: {}
+    logging_level: debug
+    warehouse_optimiser:
+      enabled: true
+      default_warehouse_size: xs
+    warehouse_config:
+      warehouse_size: [ 'xs', 's', 'm', 'l', 'xl', '2xl' ]
+      environment:
+        ci:
+          warehouse_name_prefix: ci
+        dev:
+          warehouse_name_prefix: developer
 
 
 
